--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,10 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# config files need to be explicitly added
+config/config.yaml
+
+# input and output files need to be explicitly added
+input
+output
