--- a/requirements.txt
+++ b/requirements.txt
@@ -111,6 +111,7 @@ pyzmq==27.0.1
 referencing==0.36.2
 regex==2025.7.34
 requests==2.32.4
+rich==14.2.0
 rpds-py==0.27.0
 rsa==4.9.1
 s3fs==2025.7.0
