--- a/requirements.txt
+++ b/requirements.txt
@@ -61,9 +61,11 @@ jupyter_core==5.8.1
 kiwisolver==1.4.9
 locket==1.0.0
 Mako==1.3.10
+markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.5
 matplotlib-inline==0.1.7
+mdurl==0.1.2
 mlflow==3.2.0
 mlflow-skinny==3.2.0
 mlflow-tracing==3.2.0
@@ -138,6 +140,7 @@ traitlets==5.14.3
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzdata==2025.2
+ultimate-sitemap-parser==1.6.0
 urllib3==2.5.0
 uv==0.8.8
 uvicorn==0.35.0
